cabal-version:      3.4
name:               Pa11yRunner
version:            0.1.0.0
author:             William Howell
maintainer:         wlm.howell@gmail.com

executable Pa11yRunner
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0
      , text
      , turtle
    hs-source-dirs:   app
    default-language: Haskell2010
